<resources>
    <string name="app_name">Qüitácora</string>

    <string name="bienvenido">¡Bienvenido!</string>
    <string name="no_miembro">¿No eres miembro?</string>
    <string name="registrar">Regístrate</string>
    <string name="texto_mensaje_bienvenida">¡Nos da gusto verte!</string>
    <string name="ingresar">Ingresar</string>

    <string name="hola">¡Hola!</string>
    <string name="si_miembro">Ya soy miembro</string>
    <string name="inicia_sesion">Inicia sesión</string>


    <string name="nombre_btc">Nombre de la Bitácora</string>
    <string name="descripcion_btc">Descripcion de la Bitácora</string>
    <string name="generar">Generar</string>
    <string name="nueva_btc">Nueva bitácora</string>
    <string name="nombre_mtr">Nombre del Muestreo</string>


    <string name="guardar">Guardar</string>
    <string name="medir">Medir</string>
    <string name="limpiar">Limpiar</string>

    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>


    <string name="usuario_db">Usuario</string>
    <string name="bitacora_db">Bitacora</string>
    <string name="muestreo_db">Muestreo</string>

    <string name="clave_IS">Contraseña</string>
    <string name="correo_IS">Correo electrónico</string>

    <string name="nombreUsuario_RU">Nombre usuario</string>
    <string name="apellidoUsuario_RU">Apellido usuario</string>
    <string name="clave_RU">Contraseña(6 caracteres)</string>
    <string name="confirmarClava_RU">Confirmar contraseña</string>


    <string name="title_activity_home">Qüitácora</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Qüitácora</string>
    <string name="menu_bitacora">Bitácoras</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_salir">    Cerrar Sesión   </string>


    <string name="textwarn">Permiso requerido para esta aplicación</string>
    <string name="notDeted">No se puede obtener la georeferenciación</string>
    <string name="settings">Configuración</string>

    <string name="misBitacoras_B">Mis Bitácoras</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha">12/12/12</string>
    <string name="hora">12:12 pm</string>
    <string name="ubicacion_B">12.1234,1343.134</string>
    <string name="editar">Editar</string>
    <string name="nombreMuestreo">Mis muestreos</string>
    <string name="nuevo_mtr">Nuevo muestreo</string>
    <string name="consultarDimensiones">Consultar dimensiones</string>
    <string name="sinMuestreos">Aún no tienes muestreos</string>
    <string name="sinBitacoras">Aún no tienes bitácoras.</string>
    <string name="title_activity_muestreo_mostrar_tabbe">MuestreoMostrarTabbe</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_muestreos_mostrar2">MuestreosMostrar2</string>
    <string name="erase">Borrar</string>
    <string name="brush">Brocha</string>
    <string name="save">Guardar</string>
    <string name="sml">Pequeño</string>
    <string name="med">Mediano</string>
    <string name="lrg">Grande</string>
    <string name="editarDatos">Editar mis datos</string>
    <string name="cambiarClave">Cambiar contraseña</string>
    <string name="olvidarClave">¿Olvidaste tu contraseña?</string>
    <string name="paint">Pintar</string>
    <string name="aceptar">Aceptar</string>
    <string name="borrarCuenta">Quiero borrar mi cuenta</string>
    <string name="generandoColores"> Generando los colores</string>
    <string name="menu_creditos">Créditos</string>

</resources>
