<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Bitacoras.BitacoraNuevaFragment">


    <TextView
        android:id="@+id/tv_correo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/nueva_btc"
        android:textColor="@color/cafe2"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nombre_btc_nb"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_file"
        android:ems="10"
        android:textColor="@color/cafe2"
        android:fontFamily="@font/bold"
        android:hint="@string/nombre_btc"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_correo_usuario" />

    <EditText
        android:id="@+id/et_descripcion_btc_nb"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/input_file"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/descripcion_btc"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textColor="@color/cafe2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_btc_nb"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/btn_guardar_nb"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton"
        android:fontFamily="@font/regular"
        android:text="@string/generar"
        android:textAllCaps="false"
        android:textColor="@color/beige"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion_btc_nb"
        app:layout_constraintVertical_bias="0.636" />


</androidx.constraintlayout.widget.ConstraintLayout>